--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Модальные окна</title>
+		<title>Навес для дома. 7 способов, как украсить участок и сделать жизнь комфортнее (H1)</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -12,7 +12,7 @@
 		<link href="libs/plyr/plyr.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body>
+	<body class="page-404">
 		<div class="main-wrapper">
 			<!-- start header-->
 			<header class="header" id="header">
@@ -194,82 +194,98 @@
 				<!-- end topLine-->
 			</header>
 			<!-- end header-->
-			<div class="section container">
-				<div class="row">
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Вызвать замерщика" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;договоримся о&amp;nbsp;замере" data-btn="Отправить" data-pic="1">Вызвать замерщика</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Получить расчет" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет." data-btn="Получить расчет" data-pic="2">Получить расчет</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона, и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Заказать обратный звонок" data-pic="2">Заказать обратный звонок</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Хочу навес Н1830" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;сообщим детальную информацию по&amp;nbsp;навесу, направим к&amp;nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn="Заказать обратный звонок" data-pic="2">Заказать обратный звонок (хочу навес)</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Заказать детальный расчет" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет." data-btn="Заказать расчет" data-pic="1">Заказать детальный расчет</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Записаться на&amp;nbsp;экскурсию по&amp;nbsp;производству" data-text="Оставьте свой номер телефона, мы&amp;nbsp;перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут и&amp;nbsp;запишем вас" data-btn="Запсиаться на&amp;nbsp;экскурсию" data-pic="1">Записаться на экскурсию</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call-reviews">Читать отзыв</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-policy">персональных данных</a></div>
+			<div class="s404">
+				<div class="s404__title">
+					 <svg width="660" height="659" viewBox="0 0 660 659" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M343.79 109.464L391.391 553.83L132.459 219.814L515.164 391.984L498.987 486.849L119.065 247.957L433.232 220.615L303.992 561.526L241.967 125.003L454.528 525.152L170.873 171.881" stroke="#F0F0F0"/>
+<path d="M557.622 343.903L113.257 391.503L447.273 132.571L275.103 515.277L180.238 499.1L419.13 119.177L446.472 433.344L105.56 304.104L542.083 242.08L141.934 454.64L495.206 170.985" stroke="#F0F0F0"/>
+<circle cx="330" cy="329.788" r="185.571" transform="rotate(60 330 329.788)" stroke="#F0F0F0"/>
+<circle cx="330" cy="329.788" r="205.638" transform="rotate(60 330 329.788)" stroke="#F0F0F0" stroke-width="3"/>
+<path opacity="0.1" d="M363.852 499.396L241.977 183.782L496.765 377.295L183.179 326.382L176.421 253.843L501.046 354.091L276.669 435.642L304.378 161.029L435.265 468.082L201.427 217.123L478.067 419.873" stroke="white" stroke-width="3"/>
+<circle opacity="0.1" cx="330.854" cy="330.952" r="132.55" transform="rotate(-135 330.854 330.952)" stroke="white"/>
+<circle opacity="0.1" cx="330.854" cy="330.952" r="146.614" transform="rotate(-135 330.854 330.952)" stroke="white" stroke-width="3"/>
+<circle cx="330" cy="329.788" r="238.5" transform="rotate(60 330 329.788)" stroke="#F0F0F0" stroke-width="5"/>
+</svg>
+					<div class="s404__inner s404__inner--front">404
+					</div>
+					<div class="s404__inner s404__inner--back">404
+					</div>
 				</div>
+				<div class="s404__text">А&nbsp;тут ничего не&nbsp;нашлось. = ( <br> Вернитесь в&nbsp;начало
+				</div>
+				<a class="s404__btn btn btn-primary btn-sm with-shadow" href="#"> На главную
+				</a>
 			</div>
-			<footer class="footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3">
-							<div class="footer__head">
-								<a class="logo" href="/">
-									<svg class="icon icon-logo-top ">
-										<use xlink:href="img/svg/sprite.svg#logo-top"></use>
-									</svg>
-								</a>
-								<div class="label"> <span>Строим навесы с&nbsp;2019&nbsp;года</span>
+			<div class="section-wrapper section-wrapper--footer">
+				<footer class="footer">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-3">
+								<div class="footer__head">
+									<a class="logo" href="/">
+										<svg class="icon icon-logo-top ">
+											<use xlink:href="img/svg/sprite.svg#logo-top"></use>
+										</svg>
+									</a>
+									<div class="label"> <span>Строим навесы с&nbsp;2019&nbsp;года</span>
+									</div>
 								</div>
+								<a class="footer__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Вызвать замерщика" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;договоримся о&amp;nbsp;замере" data-btn="Отправить" data-pic="1">Вызвать замерщика 
+								</a>
 							</div>
-							<a class="footer__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Вызвать замерщика" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;договоримся о&amp;nbsp;замере" data-btn="Отправить" data-pic="1">Вызвать замерщика 
-							</a>
-						</div>
-						<div class="col-6 col-md-4 col-lg-2 ml-lg-auto">
-							<h6>Компания</h6>
-							<ul>
-								<li><a href="#">Калькулятор</a></li>
-								<li><a href="#">Портфолио</a></li>
-								<li><a href="#">Отзывы</a></li>
-								<li><a href="#">Блог</a></li>
-							</ul>
-						</div>
-						<div class="col-6 col-md-4 col-lg-2">
-							<h6>Навесы</h6>
-							<ul>
-								<li><a href="#">Для авто</a></li>
-								<li><a href="#">Для парковки</a></li>
-								<li><a href="#">К дому</a></li>
-								<li><a href="#">Беседка</a></li>
-								<li><a href="#">Для дачи</a></li>
-								<li><a href="#">Кольцо и козырек</a></li>
-								<li><a href="#">Для бассейна</a></li>
-								<li><a href="#">Ангар</a></li>
-							</ul>
-						</div>
-						<div class="footer__col col-md-4 col-lg-3">
-							<h6>Производим также</h6>
-							<ul>
-								<li><a href="#">Бетонные площадки</a></li>
-								<li><a href="#">Заезды на участок</a></li>
-								<li><a href="#">Мощение</a></li>
-								<li><a href="#">Ворота откатные и распашные</a></li>
-								<li><a href="#">Заборы и ограждения</a></li>
-								<li><a href="#">Кованые изделия</a></li>
-								<li><a href="#">Крыльцо</a></li>
-								<li><a href="#">Лестница в дом</a></li>
-								<li><a href="#">Лестница на улице</a></li>
-								<li><a href="#">Ангары</a></li>
-								<li><a href="#">Изготовление металлоконструкций</a></li>
-								<li><a href="#">Беседки </a></li>
-							</ul>
-						</div>
-						<div class="col-lg-8">
-							<div class="footer__content"><span>© 2022</span><a href="#">Политика конфиденцильности</a>
-								<p>Данный сайт носит информационный характер и&nbsp;не&nbsp;является публичной офертой, которая определяется положениями статьи 437 (2) Гражданского кодекса РФ. Для получения подробной информации о&nbsp;наличии и&nbsp;стоимости указанных товаров и&nbsp;услуг, обращайтесь к&nbsp;нашим менеджерам или укажите телефон, чтобы мы&nbsp;перезвонили вам. </p>
+							<div class="col-6 col-md-4 col-lg-2 ml-lg-auto">
+								<h6>Компания</h6>
+								<ul>
+									<li><a href="#">Калькулятор</a></li>
+									<li><a href="#">Портфолио</a></li>
+									<li><a href="#">Отзывы</a></li>
+									<li><a href="#">Блог</a></li>
+								</ul>
+							</div>
+							<div class="col-6 col-md-4 col-lg-2">
+								<h6>Навесы</h6>
+								<ul>
+									<li><a href="#">Для авто</a></li>
+									<li><a href="#">Для парковки</a></li>
+									<li><a href="#">К дому</a></li>
+									<li><a href="#">Беседка</a></li>
+									<li><a href="#">Для дачи</a></li>
+									<li><a href="#">Кольцо и козырек</a></li>
+									<li><a href="#">Для бассейна</a></li>
+									<li><a href="#">Ангар</a></li>
+								</ul>
+							</div>
+							<div class="footer__col col-md-4 col-lg-3">
+								<h6>Производим также</h6>
+								<ul>
+									<li><a href="#">Бетонные площадки</a></li>
+									<li><a href="#">Заезды на участок</a></li>
+									<li><a href="#">Мощение</a></li>
+									<li><a href="#">Ворота откатные и распашные</a></li>
+									<li><a href="#">Заборы и ограждения</a></li>
+									<li><a href="#">Кованые изделия</a></li>
+									<li><a href="#">Крыльцо</a></li>
+									<li><a href="#">Лестница в дом</a></li>
+									<li><a href="#">Лестница на улице</a></li>
+									<li><a href="#">Ангары</a></li>
+									<li><a href="#">Изготовление металлоконструкций</a></li>
+									<li><a href="#">Беседки </a></li>
+								</ul>
+							</div>
+							<div class="col-lg-8">
+								<div class="footer__content"><span>© 2022</span><a href="#">Политика конфиденцильности</a>
+									<p>Данный сайт носит информационный характер и&nbsp;не&nbsp;является публичной офертой, которая определяется положениями статьи 437 (2) Гражданского кодекса РФ. Для получения подробной информации о&nbsp;наличии и&nbsp;стоимости указанных товаров и&nbsp;услуг, обращайтесь к&nbsp;нашим менеджерам или укажите телефон, чтобы мы&nbsp;перезвонили вам. </p>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			</footer>
+				</footer>
+			</div>
+			<div class="back-top" id="back-top"><a href="#top">
+					<svg class="icon icon-arrow-up ">
+						<use xlink:href="img/svg/sprite.svg#arrow-up"></use>
+					</svg><span>Наверх</span></a>
+			</div>
 		</div>
 		<!--  start modals-->
 		<div id="modal-call" style="display: none">
