--- a/public/index.html
+++ b/public/index.html
@@ -448,26 +448,6 @@
 																		<!-- /picture-->
 																	</a>
 																</div>
-																<div class="sSpecifications__slide swiper-slide">
-																	<a class="sSpecifications__img-wrap" href="img/@2x/sSpecifications-md-3.jpg" data-fancybox="sCard-gallery">
-																		<!-- picture-->
-																		<picture> 
-																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-md-3.avif"/>
-																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-md-3.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-md-3.jpg" alt="" loading="lazy"/>
-																		</picture>
-																		<!-- /picture-->
-																	</a>
-																</div>
-																<div class="sSpecifications__slide swiper-slide">
-																	<a class="sSpecifications__img-wrap" href="img/@2x/sSpecifications-md-4.jpg" data-fancybox="sCard-gallery">
-																		<!-- picture-->
-																		<picture> 
-																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-md-4.avif"/>
-																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-md-4.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-md-4.jpg" alt="" loading="lazy"/>
-																		</picture>
-																		<!-- /picture-->
-																	</a>
-																</div>
 														</div>
 													</div>
 													<div class="sSpecifications__slider-thumbs sSpecifications__slider-thumbs--js swiper">
@@ -488,26 +468,6 @@
 																		<picture class="picture-bg"> 
 																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-2.avif"/>
 																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-2.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-2.jpg" alt="" loading="lazy"/>
-																		</picture>
-																		<!-- /picture-->
-																	</div>
-																</div>
-																<div class="sSpecifications__slide swiper-slide">
-																	<div class="sSpecifications__img-wrap sSpecifications__img-wrap--thumbs bg-wrap">
-																		<!-- picture-->
-																		<picture class="picture-bg"> 
-																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-3.avif"/>
-																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-3.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-3.jpg" alt="" loading="lazy"/>
-																		</picture>
-																		<!-- /picture-->
-																	</div>
-																</div>
-																<div class="sSpecifications__slide swiper-slide">
-																	<div class="sSpecifications__img-wrap sSpecifications__img-wrap--thumbs bg-wrap">
-																		<!-- picture-->
-																		<picture class="picture-bg"> 
-																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-4.avif"/>
-																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-4.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-4.jpg" alt="" loading="lazy"/>
 																		</picture>
 																		<!-- /picture-->
 																	</div>
@@ -620,26 +580,6 @@
 																		<!-- /picture-->
 																	</a>
 																</div>
-																<div class="sSpecifications__slide swiper-slide">
-																	<a class="sSpecifications__img-wrap" href="img/@2x/sSpecifications-md-3.jpg" data-fancybox="sCard-gallery">
-																		<!-- picture-->
-																		<picture> 
-																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-md-3.avif"/>
-																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-md-3.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-md-3.jpg" alt="" loading="lazy"/>
-																		</picture>
-																		<!-- /picture-->
-																	</a>
-																</div>
-																<div class="sSpecifications__slide swiper-slide">
-																	<a class="sSpecifications__img-wrap" href="img/@2x/sSpecifications-md-4.jpg" data-fancybox="sCard-gallery">
-																		<!-- picture-->
-																		<picture> 
-																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-md-4.avif"/>
-																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-md-4.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-md-4.jpg" alt="" loading="lazy"/>
-																		</picture>
-																		<!-- /picture-->
-																	</a>
-																</div>
 														</div>
 													</div>
 													<div class="sSpecifications__slider-thumbs sSpecifications__slider-thumbs--js swiper">
@@ -660,26 +600,6 @@
 																		<picture class="picture-bg"> 
 																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-2.avif"/>
 																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-2.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-2.jpg" alt="" loading="lazy"/>
-																		</picture>
-																		<!-- /picture-->
-																	</div>
-																</div>
-																<div class="sSpecifications__slide swiper-slide">
-																	<div class="sSpecifications__img-wrap sSpecifications__img-wrap--thumbs bg-wrap">
-																		<!-- picture-->
-																		<picture class="picture-bg"> 
-																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-3.avif"/>
-																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-3.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-3.jpg" alt="" loading="lazy"/>
-																		</picture>
-																		<!-- /picture-->
-																	</div>
-																</div>
-																<div class="sSpecifications__slide swiper-slide">
-																	<div class="sSpecifications__img-wrap sSpecifications__img-wrap--thumbs bg-wrap">
-																		<!-- picture-->
-																		<picture class="picture-bg"> 
-																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-4.avif"/>
-																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-4.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-4.jpg" alt="" loading="lazy"/>
 																		</picture>
 																		<!-- /picture-->
 																	</div>
@@ -792,26 +712,6 @@
 																		<!-- /picture-->
 																	</a>
 																</div>
-																<div class="sSpecifications__slide swiper-slide">
-																	<a class="sSpecifications__img-wrap" href="img/@2x/sSpecifications-md-3.jpg" data-fancybox="sCard-gallery">
-																		<!-- picture-->
-																		<picture> 
-																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-md-3.avif"/>
-																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-md-3.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-md-3.jpg" alt="" loading="lazy"/>
-																		</picture>
-																		<!-- /picture-->
-																	</a>
-																</div>
-																<div class="sSpecifications__slide swiper-slide">
-																	<a class="sSpecifications__img-wrap" href="img/@2x/sSpecifications-md-4.jpg" data-fancybox="sCard-gallery">
-																		<!-- picture-->
-																		<picture> 
-																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-md-4.avif"/>
-																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-md-4.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-md-4.jpg" alt="" loading="lazy"/>
-																		</picture>
-																		<!-- /picture-->
-																	</a>
-																</div>
 														</div>
 													</div>
 													<div class="sSpecifications__slider-thumbs sSpecifications__slider-thumbs--js swiper">
@@ -832,26 +732,6 @@
 																		<picture class="picture-bg"> 
 																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-2.avif"/>
 																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-2.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-2.jpg" alt="" loading="lazy"/>
-																		</picture>
-																		<!-- /picture-->
-																	</div>
-																</div>
-																<div class="sSpecifications__slide swiper-slide">
-																	<div class="sSpecifications__img-wrap sSpecifications__img-wrap--thumbs bg-wrap">
-																		<!-- picture-->
-																		<picture class="picture-bg"> 
-																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-3.avif"/>
-																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-3.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-3.jpg" alt="" loading="lazy"/>
-																		</picture>
-																		<!-- /picture-->
-																	</div>
-																</div>
-																<div class="sSpecifications__slide swiper-slide">
-																	<div class="sSpecifications__img-wrap sSpecifications__img-wrap--thumbs bg-wrap">
-																		<!-- picture-->
-																		<picture class="picture-bg"> 
-																			<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-4.avif"/>
-																			<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-4.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-4.jpg" alt="" loading="lazy"/>
 																		</picture>
 																		<!-- /picture-->
 																	</div>
@@ -3041,7 +2921,7 @@
 						<!-- +e.input-wrap-->
 						<button class="form-wrap__btn btn" type="submit">
 						</button>
-						<div class="form-wrap__agreement">Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку <a href="#">персональных данных</a> 
+						<div class="form-wrap__agreement">Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку <a class="link-modal-js" href="#modal-policy">персональных данных</a> 
 						</div>
 					</form>
 				</div>
@@ -3085,6 +2965,17 @@
 			</div>
 		</div>
 		<!-- #modal-call-reviews-->
+		<div id="modal-policy" style="display: none">
+			<div class="modal-win modal-win--reviews d-block p-4">
+				<p>Политика конфиденциальности объясняет пользователям ресурса <a href="https://naves-na-zakaz.ru/">https://naves-na-zakaz.ru</a>/ (сайт \ мобильное приложение), с какой целью их личная информация собирается, и как будет использоваться.</p>
+				<p>Сайт <a href="https://naves-na-zakaz.ru/"> https://naves-na-zakaz.ru/</a> уважает ваше право и соблюдает конфиденциальность при заполнении, передачи и хранении ваших персональных данных.</p>
+				<p>Размещение заявки на сайте <a href="https://naves-na-zakaz.ru/">https://naves-na-zakaz.ru</a> означает Ваше согласие на обработку данных и дальнейшей передачи ваших контактных данных компании «Навес на заказ».</p>
+				<p>Под персональными данными подразумевается информация, относящаяся к субъекту персональных данных, в частности фамилия, имя и отчество, дата рождения, адрес, контактные реквизиты (телефон, адрес электронной почты), семейное, имущественное положение и иные данные, относимые Федеральным законом от 27 июля 2006 года № 152-ФЗ «О персональных данных» (далее – «Закон») к категории персональных данных.</p>
+				<p>Целью обработки персональных данных является оказание сайтом <a href="https://naves-na-zakaz.ru/">https://naves-na-zakaz.ru</a> информационно-справочных услуг, а также информирование об оказываемых услугах компании «Навес на заказ».</p>
+				<p>В случае отзыва согласия на обработку своих персональных данных мы обязуемся удалить Ваши персональные данные в срок не позднее 3 рабочих дней. Отзыв согласия можно отправить в электронном виде по адресу: <a href="mailto:info@naves-na-zakaz.ru">info@naves-na-zakaz.ru</a></p>
+			</div>
+		</div>
+		<!-- #modal-policy-->
 		<!-- end modals-->
 		<script src="libs/jquery/jquery.min.js"></script>
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
