--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -1039,7 +1039,7 @@
 						<!-- +e.input-wrap-->
 						<button class="form-wrap__btn btn" type="submit">
 						</button>
-						<div class="form-wrap__agreement">Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку <a href="#">персональных данных</a> 
+						<div class="form-wrap__agreement">Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку <a class="link-modal-js" href="#modal-policy">персональных данных</a> 
 						</div>
 					</form>
 				</div>
@@ -1083,6 +1083,17 @@
 			</div>
 		</div>
 		<!-- #modal-call-reviews-->
+		<div id="modal-policy" style="display: none">
+			<div class="modal-win modal-win--reviews d-block p-4">
+				<p>Политика конфиденциальности объясняет пользователям ресурса <a href="https://naves-na-zakaz.ru/">https://naves-na-zakaz.ru</a>/ (сайт \ мобильное приложение), с какой целью их личная информация собирается, и как будет использоваться.</p>
+				<p>Сайт <a href="https://naves-na-zakaz.ru/"> https://naves-na-zakaz.ru/</a> уважает ваше право и соблюдает конфиденциальность при заполнении, передачи и хранении ваших персональных данных.</p>
+				<p>Размещение заявки на сайте <a href="https://naves-na-zakaz.ru/">https://naves-na-zakaz.ru</a> означает Ваше согласие на обработку данных и дальнейшей передачи ваших контактных данных компании «Навес на заказ».</p>
+				<p>Под персональными данными подразумевается информация, относящаяся к субъекту персональных данных, в частности фамилия, имя и отчество, дата рождения, адрес, контактные реквизиты (телефон, адрес электронной почты), семейное, имущественное положение и иные данные, относимые Федеральным законом от 27 июля 2006 года № 152-ФЗ «О персональных данных» (далее – «Закон») к категории персональных данных.</p>
+				<p>Целью обработки персональных данных является оказание сайтом <a href="https://naves-na-zakaz.ru/">https://naves-na-zakaz.ru</a> информационно-справочных услуг, а также информирование об оказываемых услугах компании «Навес на заказ».</p>
+				<p>В случае отзыва согласия на обработку своих персональных данных мы обязуемся удалить Ваши персональные данные в срок не позднее 3 рабочих дней. Отзыв согласия можно отправить в электронном виде по адресу: <a href="mailto:info@naves-na-zakaz.ru">info@naves-na-zakaz.ru</a></p>
+			</div>
+		</div>
+		<!-- #modal-policy-->
 		<!-- end modals-->
 		<script src="libs/jquery/jquery.min.js"></script>
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
