--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -492,6 +492,10 @@
 												</div>
 											</div>
 										</div>
+										<div class="sFilter__btn-wrap">
+											<button class="sFilter__btn-tooltip" type="button">Применить
+											</button>
+										</div>
 									</div>
 								</div>
 							</div>
