--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -493,7 +493,9 @@
 											</div>
 										</div>
 										<div class="sFilter__btn-wrap">
-											<button class="sFilter__btn-tooltip" type="button">Применить
+											<button class="sFilter__btn-tooltip btn-primary" type="button">Применить
+											</button>
+											<button class="sFilter__btn-tooltip btn-secondary" type="button">Сбросить
 											</button>
 										</div>
 									</div>
