--- a/public/04-reviews.html
+++ b/public/04-reviews.html
@@ -423,6 +423,16 @@
 													<use xlink:href="img/svg/sprite.svg#youtube"></use>
 												</svg>
 											</a>
+											<a class="sContact__links sContact__links--vk" href="#">
+												<svg class="icon icon-vk ">
+													<use xlink:href="img/svg/sprite.svg#vk"></use>
+												</svg>
+											</a>
+											<a class="sContact__links sContact__links--yzen" href="#">
+												<svg class="icon icon-yzen ">
+													<use xlink:href="img/svg/sprite.svg#yzen"></use>
+												</svg>
+											</a>
 										</div>
 										<a class="sContact__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона, и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Заказать обратный звонок" data-pic="2">Обратный звонок
 										</a>
@@ -507,6 +517,16 @@
 									<a class="sContact__links sContact__links--yt" href="#">
 										<svg class="icon icon-youtube ">
 											<use xlink:href="img/svg/sprite.svg#youtube"></use>
+										</svg>
+									</a>
+									<a class="sContact__links sContact__links--vk" href="#">
+										<svg class="icon icon-vk ">
+											<use xlink:href="img/svg/sprite.svg#vk"></use>
+										</svg>
+									</a>
+									<a class="sContact__links sContact__links--yzen" href="#">
+										<svg class="icon icon-yzen ">
+											<use xlink:href="img/svg/sprite.svg#yzen"></use>
 										</svg>
 									</a>
 								</div>
