--- a/public/03-portfolio-2.html
+++ b/public/03-portfolio-2.html
@@ -332,7 +332,8 @@
 										<td>7 дней • 1 день</td>
 									</tr>
 								</tbody>
-							</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Хочу примерно такой же</a>
+							</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Хочу примерно такой же</a><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Хочу примерно такой же</a>
+							<button class="btn btn-outline-secondary">Смотреть отзыв</button>
 							<button class="btn btn-outline-secondary">Сохранить себе</button>
 						</div>
 					</div>
@@ -797,6 +798,7 @@
 						<h4>&laquo;Убрали за&nbsp;собой мусор, соблюдали чистоту&raquo;</h4>
 						<p>Вы&nbsp;купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.</p>
 						<p>Вы&nbsp;купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.</p>
+						<div class="text-end mt-3"><a class="btn btn-primary" href="#">Кнопка </a></div>
 					</div>
 				</div>
 			</div>
