--- a/public/index.html
+++ b/public/index.html
@@ -544,7 +544,8 @@
 															<td>7 дней • 1 день</td>
 														</tr>
 													</tbody>
-												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего навеса</a>
+												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего навеса</a><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего навеса</a>
+												<button class="btn btn-outline-secondary">Смотреть отзыв</button>
 											</div>
 										</div>
 									</div>
@@ -676,7 +677,8 @@
 															<td>7 дней • 1 день</td>
 														</tr>
 													</tbody>
-												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего навеса</a>
+												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего навеса</a><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего навеса</a>
+												<button class="btn btn-outline-secondary">Смотреть отзыв</button>
 											</div>
 										</div>
 									</div>
@@ -808,7 +810,8 @@
 															<td>7 дней • 1 день</td>
 														</tr>
 													</tbody>
-												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего навеса</a>
+												</table><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего навеса</a><a class="link-modal-js btn btn-primary" href="#modal-call" data-title="Заказать расчет похожего навеса" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;выполним расчет" data-btn="Заказать расчет" data-pic="2">Заказать расчет похожего навеса</a>
+												<button class="btn btn-outline-secondary">Смотреть отзыв</button>
 											</div>
 										</div>
 									</div>
@@ -2980,6 +2983,7 @@
 						<h4>&laquo;Убрали за&nbsp;собой мусор, соблюдали чистоту&raquo;</h4>
 						<p>Вы&nbsp;купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.</p>
 						<p>Вы&nbsp;купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.</p>
+						<div class="text-end mt-3"><a class="btn btn-primary" href="#">Кнопка </a></div>
 					</div>
 				</div>
 			</div>
