--- a/public/index.html
+++ b/public/index.html
@@ -2853,6 +2853,146 @@
 			<!-- end sContact-->
 			<div class="section-wrapper section-wrapper--footer">
 				<footer class="footer">
+					<!-- start sContact-->
+					<div class="sContact section" id="sContact">
+						<div class="container"> 
+							<div class="row">
+								<e class="wrap col-auto">
+									<h5>Телефоны</h5>
+									<div class="sContact__content">
+										<div class="sContact__phone-number"><a class="strong" href="tel:+74952563067">
+												<svg class="me-2" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M15.1917 9.93835L15.1799 10.0321C12.2827 8.66273 11.9796 8.48032 11.6055 9.01256C11.3459 9.38112 10.5897 10.217 10.3617 10.4643C10.1312 10.708 9.90191 10.7267 9.5106 10.558C9.11535 10.3706 7.84658 9.97708 6.34461 8.70271C5.17465 7.70945 4.38941 6.49131 4.15753 6.1165C3.77149 5.48431 4.57913 5.39436 5.31431 4.07501C5.44606 3.81264 5.37887 3.6065 5.28137 3.42034C5.18256 3.23293 4.396 1.39634 4.06662 0.664208C3.75041 -0.0654297 3.42499 0.0270246 3.18125 0.0270246C2.42236 -0.0354443 1.86768 -0.0254495 1.37888 0.456811C-0.747593 2.67321 -0.211363 4.95957 1.60813 7.39086C5.18387 11.8287 7.08901 12.6458 10.5725 13.7802C11.5132 14.0638 12.3709 14.0238 13.0495 13.9314C13.8057 13.8177 15.3775 13.0306 15.7056 12.1497C16.0415 11.2689 16.0415 10.538 15.9427 10.3694C15.8452 10.2007 15.587 10.107 15.1917 9.93835Z" fill="#2C3440"/>
+</svg>+7 495 256 30 67 </a><a href="tel:+74952563067">
+												<svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g clip-path="url(#clip0_2028_46)">
+<path d="M11.4968 9.46462L11.4911 9.51224C10.0949 8.81637 9.94884 8.72367 9.76853 8.99414C9.64345 9.18145 9.279 9.60621 9.16916 9.73192C9.05805 9.85573 8.94757 9.86526 8.759 9.77954C8.56853 9.6843 7.9571 9.4843 7.23329 8.83668C6.66948 8.33192 6.29107 7.71287 6.17932 7.5224C5.99329 7.20113 6.3825 7.15541 6.73678 6.48494C6.80027 6.35161 6.76789 6.24684 6.72091 6.15224C6.67329 6.057 6.29424 5.12367 6.13551 4.75161C5.98313 4.38081 5.8263 4.4278 5.70884 4.4278C5.34313 4.39605 5.07583 4.40113 4.84027 4.64621C3.81551 5.77256 4.07392 6.93446 4.95075 8.17002C6.67392 10.4253 7.59202 10.8405 9.27075 11.417C9.72408 11.5611 10.1374 11.5408 10.4644 11.4938C10.8288 11.436 11.5863 11.036 11.7444 10.5884C11.9063 10.1408 11.9063 9.76938 11.8587 9.68367C11.8117 9.59795 11.6873 9.55033 11.4968 9.46462V9.46462Z" fill="#55CD6C"/>
+<path d="M13.4094 2.57C8.52753 -2.14937 0.448161 1.27349 0.444986 7.93127C0.444986 9.26206 0.793558 10.5598 1.45768 11.7059L0.380859 15.6183L4.40308 14.5694C9.42213 17.2805 15.6164 13.6805 15.619 7.93508C15.619 5.91857 14.8317 4.02079 13.3999 2.59476L13.4094 2.57ZM14.3504 7.91413C14.3466 12.7605 9.02657 15.7871 4.81895 13.3135L4.59038 13.1776L2.20943 13.7967L2.84753 11.4824L2.69578 11.2443C0.0773672 7.07603 3.08562 1.62841 8.04562 1.62841C9.7307 1.62841 11.3123 2.28555 12.5034 3.47603C13.6939 4.65635 14.3504 6.23793 14.3504 7.91413V7.91413Z" fill="#55CD6C"/>
+</g>
+<defs>
+<clipPath id="clip0_2028_46">
+<rect width="15.2381" height="15.2381" fill="white" transform="translate(0.380859 0.380859)"/>
+</clipPath>
+</defs>
+</svg>+7 495 256 30 67  </a><br/>
+										</div>
+									</div>
+								</e>
+								<div class="sContact__wrap col-auto">
+									<h5>Email</h5><a href="mailto:info@naves-na-zakaz.ru">info@naves-na-zakaz.RU</a><br/>
+									<div class="sContact__flex">
+										<a class="sContact__links" href="#">
+											<svg class="icon icon-instagram-map ">
+												<use xlink:href="img/svg/sprite.svg#instagram-map"></use>
+											</svg>
+										</a>
+										<a class="sContact__links sContact__links--yt" href="#">
+											<svg class="icon icon-youtube ">
+												<use xlink:href="img/svg/sprite.svg#youtube"></use>
+											</svg>
+										</a>
+										<a class="sContact__links sContact__links--vk" href="#">
+											<svg class="icon icon-vk ">
+												<use xlink:href="img/svg/sprite.svg#vk"></use>
+											</svg>
+										</a>
+										<a class="sContact__links sContact__links--yzen" href="#">
+											<svg class="icon icon-yzen ">
+												<use xlink:href="img/svg/sprite.svg#yzen"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="form-wrap">
+								<form>
+									<div class="row">
+										<div class="col-lg-8"> 
+											<div class="form-wrap__input-wrap form-group">
+												<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="Вопрос"></textarea>
+												</label>
+											</div>
+											<!-- +e.input-wrap-->
+										</div>
+										<div class="col-lg-4">
+											<div class="form-wrap__input-wrap form-group">
+												<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/>
+												</label>
+											</div>
+											<!-- +e.input-wrap-->
+											<button class="btn btn btn-primary" type="submit">Получить консультацию </button>
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+					<!-- end sContact-->
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-3">
+								<div class="footer__head">
+									<a class="logo" href="/">
+										<svg class="icon icon-logo-top ">
+											<use xlink:href="img/svg/sprite.svg#logo-top"></use>
+										</svg>
+									</a>
+									<div class="label"> <span>Работаем с 2012 года</span>
+									</div>
+								</div>
+								<a class="footer__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Вызвать замерщика" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;договоримся о&amp;nbsp;замере" data-btn="Отправить" data-pic="1">Вызвать замерщика 
+								</a>
+							</div>
+							<div class="col-6 col-md-4 col-lg-2 ml-lg-auto">
+								<h6>Компания</h6>
+								<ul>
+									<li><a href="#">Калькулятор</a></li>
+									<li><a href="#">Портфолио</a></li>
+									<li><a href="#">Отзывы</a></li>
+									<li><a href="#">Блог</a></li>
+								</ul>
+							</div>
+							<div class="col-6 col-md-4 col-lg-2">
+								<h6>Навесы</h6>
+								<ul>
+									<li><a href="#">Для авто</a></li>
+									<li><a href="#">Для парковки</a></li>
+									<li><a href="#">К дому</a></li>
+									<li><a href="#">Беседка</a></li>
+									<li><a href="#">Для дачи</a></li>
+									<li><a href="#">Кольцо и козырек</a></li>
+									<li><a href="#">Для бассейна</a></li>
+									<li><a href="#">Ангар</a></li>
+								</ul>
+							</div>
+							<div class="footer__col col-md-4 col-lg-3">
+								<h6>Производим также</h6>
+								<ul>
+									<li><a href="#">Бетонные площадки</a></li>
+									<li><a href="#">Заезды на участок</a></li>
+									<li><a href="#">Мощение</a></li>
+									<li><a href="#">Ворота откатные и распашные</a></li>
+									<li><a href="#">Заборы и ограждения</a></li>
+									<li><a href="#">Кованые изделия</a></li>
+									<li><a href="#">Крыльцо</a></li>
+									<li><a href="#">Лестница в дом</a></li>
+									<li><a href="#">Лестница на улице</a></li>
+									<li><a href="#">Ангары</a></li>
+									<li><a href="#">Изготовление металлоконструкций</a></li>
+									<li><a href="#">Беседки </a></li>
+								</ul>
+							</div>
+							<div class="col-lg-8">
+								<div class="footer__content"><span>© 2022</span><a href="#">Политика конфиденцильности</a>
+									<p>Данный сайт носит информационный характер и&nbsp;не&nbsp;является публичной офертой, которая определяется положениями статьи 437 (2) Гражданского кодекса РФ. Для получения подробной информации о&nbsp;наличии и&nbsp;стоимости указанных товаров и&nbsp;услуг, обращайтесь к&nbsp;нашим менеджерам или укажите телефон, чтобы мы&nbsp;перезвонили вам. </p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</footer>
+			</div><br><br>
+			<div class="section-wrapper section-wrapper--footer">
+				<footer class="footer">
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-3">
