--- a/public/index.html
+++ b/public/index.html
@@ -2854,7 +2854,7 @@
 			<div class="section-wrapper section-wrapper--footer">
 				<footer class="footer">
 					<!-- start sContact-->
-					<div class="sContact section" id="sContact">
+					<div class="sContact section pt-0" id="sContact">
 						<div class="container"> 
 							<div class="row">
 								<e class="wrap col-auto">
@@ -2879,24 +2879,24 @@
 									</div>
 								</e>
 								<div class="sContact__wrap col-auto">
-									<h5>Email</h5><a href="mailto:info@naves-na-zakaz.ru">info@naves-na-zakaz.RU</a><br/>
-									<div class="sContact__flex">
-										<a class="sContact__links" href="#">
+									<h5>Email</h5><a href="mailto:info@naves-na-zakaz.ru">info@naves-na-zakaz.RU</a>
+									<div class="sContact__flex mt-2">
+										<a class="sContact__links" href="#" style="--brand-color:#D21FFF ">
 											<svg class="icon icon-instagram-map ">
 												<use xlink:href="img/svg/sprite.svg#instagram-map"></use>
 											</svg>
 										</a>
-										<a class="sContact__links sContact__links--yt" href="#">
+										<a class="sContact__links" href="#" style="--brand-color: red">
 											<svg class="icon icon-youtube ">
 												<use xlink:href="img/svg/sprite.svg#youtube"></use>
 											</svg>
 										</a>
-										<a class="sContact__links sContact__links--vk" href="#">
+										<a class="sContact__links" href="#" style="--brand-color:rgb(0, 119, 255)">
 											<svg class="icon icon-vk ">
 												<use xlink:href="img/svg/sprite.svg#vk"></use>
 											</svg>
 										</a>
-										<a class="sContact__links sContact__links--yzen" href="#">
+										<a class="sContact__links" href="#" style="--brand-color:#000 ">
 											<svg class="icon icon-yzen ">
 												<use xlink:href="img/svg/sprite.svg#yzen"></use>
 											</svg>
