--- a/public/05-thanks.html
+++ b/public/05-thanks.html
@@ -149,14 +149,32 @@
 				<div class="topLine section" id="topLine">
 					<div class="container">
 						<div class="topLine__main-row row">
-							<div class="col-auto">
+							<div class="col-auto d-lg-none">
+								<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
+								</div>
+							</div>
+							<div class="col col-lg-auto text-center text-lg-left">
 								<a class="logo" href="/">
 									<svg class="icon icon-logo-top ">
 										<use xlink:href="img/svg/sprite.svg#logo-top"></use>
 									</svg>
 								</a>
 							</div>
-							<div class="col">
+							<div class="col-auto d-lg-none">
+								<div class="soc soc--header">
+									<a class="soc__item soc__item--whatsapp" href="#" target="_blank">
+										<svg class="icon icon-whatsapp ">
+											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+										</svg>
+									</a>
+									<a class="soc__item soc__item--phone-call link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона, и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Заказать обратный звонок" data-pic="2">
+										<svg class="icon icon-phone-call ">
+											<use xlink:href="img/svg/sprite.svg#phone-call"></use>
+										</svg>
+									</a>
+								</div>
+							</div>
+							<div class="col d-none d-lg-block">
 								<div class="row">
 									<div class="topLine__col col-auto">
 										<div class="locaton-dropdown dropdown">
