--- a/public/05-thanks.html
+++ b/public/05-thanks.html
@@ -362,6 +362,51 @@
 			</div>
 		</div>
 		<!-- #modal-policy-->
+		<div id="modal-callback" style="display: none">
+			<div class="modal-win modal-win--callback">
+				<div class="form-wrap">
+					<form>
+						<div class="row">
+							<div class="col-lg-6">
+								<div class="form-wrap__wrap">
+									<picture class="modal-avatar-js"></picture>
+									<div class="text-center">
+										<div class="h4">Обратный звонок</div>
+										<p>Оставьте свой номер телефона и&nbsp;мы&nbsp;вам перезвоним в&nbsp;течение 15&nbsp;минут</p>
+									</div>
+									<div class="form-wrap__input-wrap form-group">
+										<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/>
+										</label>
+									</div>
+									<!-- +e.input-wrap-->
+									<div class="form-wrap__input-wrap form-group">
+										<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш телефон" required="required"/>
+										</label>
+									</div>
+									<!-- +e.input-wrap-->
+									<button class="form-wrap__btn btn btn-primary" type="submit">Запросить обратный звонок
+									</button>
+									<div class="form-wrap__agreement">Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку <a class="link-modal-js" href="#modal-policy">персональных данных</a> 
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-6 d-none d-lg-block">
+								<div class="form-wrap__img-wrap">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/modal-bg-2.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/modal-bg-2.webp"/><img class="object-fit-js" src="img/@2x/modal-bg-2.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<picture class="modal-pic-js img"></picture>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+		<!-- #modal-callback-->
 		<!-- end modals-->
 		<script src="libs/jquery/jquery.min.js"></script>
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
