--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -119,13 +119,15 @@
 								</div>
 							</div>
 							<div class="col text-end">
-								<a class="logo d-lg-none" href="/">
-									<svg class="icon icon-logo-top ">
-										<use xlink:href="img/svg/sprite.svg#logo-top"></use>
-									</svg>
-								</a>
-								<a class="top-nav__tel" href="tel:+74952563067">+7 495 256 30 67
-								</a>
+								<div class="top-nav__center-block">
+									<a class="logo d-lg-none mt" href="/">
+										<svg class="icon icon-logo-top ">
+											<use xlink:href="img/svg/sprite.svg#logo-top"></use>
+										</svg>
+									</a>
+									<a class="top-nav__tel mt" href="tel:+74952563067">+7 495 256 30 67
+									</a>
+								</div>
 							</div>
 							<div class="col-auto">
 								<div class="soc soc--header">
