--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -212,8 +212,8 @@
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call" data-title="Записаться на&amp;nbsp;экскурсию по&amp;nbsp;производству" data-text="Оставьте свой номер телефона, мы&amp;nbsp;перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут и&amp;nbsp;запишем вас" data-btn="Запсиаться на&amp;nbsp;экскурсию" data-pic="1">Записаться на экскурсию</a></div>
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call-reviews">Читать отзыв</a></div>
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-policy">персональных данных</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-callback" data-pic="/img/@2x/modal-3.png" data-avatar="/img/@2x/avatar-1.png">Обратный звонок</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-callback" data-pic="/img/@2x/modal-4.png" data-avatar="/img/@2x/avatar-2.png">Обратный звонок 2</a></div>
+										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-callback" data-desktop-pic="img/@2x/modal-3.png" data-mobile-pic="img/@2x/avatar-1.png">Обратный звонок</a></div>
+										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-callback" data-desktop-pic="img/@2x/modal-4.png" data-mobile-pic="img/@2x/avatar-2.png">Обратный звонок 2</a></div>
 				</div>
 			</div>
 			<footer class="footer">
